--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -6,6 +6,7 @@
 
   //themedark
   --theme-blue: #2133d6;
+  --theme-white-bg: #ffffff1e;
   --theme-aqua: #00e0ff;
   --theme-aqua-glow: #00e1ff7a;
 
