--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -282,7 +282,7 @@ main {
   padding-right: 5%;
   padding: 30px 5% 30px;
   h3 {
-    opacity: 0.5;
+    opacity: 0.7;
   }
 }
 
@@ -305,11 +305,12 @@ header {
     top: 120px;
     text-align: center;
     z-index: 2;
-    h5 {
+    > span {
       font-size: 10px;
       margin: 0 auto 5px;
       text-transform: uppercase;
       opacity: 0.8;
+      display: block;
     }
   }
 }
@@ -473,7 +474,7 @@ main {
     background-size: 7px 9px;
     background-image: linear-gradient(
       90deg,
-      var(--whitebg) 40%,
+      var(--theme-white-bg) 40%,
       transparent 40%
     );
   }
@@ -825,6 +826,11 @@ main {
   header {
     h3 {
       color: var(--theme-red);
+    }
+    .theme-selector {
+      > span {
+        color: var(--theme-red);
+      }
     }
   }
   main h1 span {
