--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -374,8 +374,8 @@ main {
   h2 {
     margin-bottom: 60px;
     line-height: 1.5em;
-    opacity: 0;
     animation: fadeIn 0.3s 0.1s forwards;
+    font-size: 1.2rem;
   }
   .page-content {
     opacity: 0;
@@ -513,9 +513,6 @@ main {
   }
   main {
     padding: 30px 4% 30px 4%;
-    h2 {
-      font-size: 1.3rem;
-    }
   }
 }
 
@@ -612,13 +609,14 @@ main {
     margin-bottom: -101px;
     padding-left: 100px;
     h2 {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
     }
   }
 
   aside,
   main {
     padding-top: 200px;
+    max-width: 1400px;
   }
   main {
     padding: 180px 10% 30px;
@@ -658,7 +656,10 @@ main {
     padding: 12px 70px;
   }
   main {
-    h1,
+    h1 {
+      padding-left: 12%;
+      margin-bottom: 70px;
+    }
     h2 {
       padding-left: 20%;
     }
@@ -693,7 +694,7 @@ main {
 @include mediamin(1540px) {
   h1 {
     span {
-      font-size: 88px;
+      font-size: 130px;
     }
   }
   main {
@@ -702,7 +703,7 @@ main {
     padding-top: 200px;
     h2 {
       margin-bottom: 90px;
-      font-size: 1.7rem;
+      font-size: 1.3rem;
     }
   }
   section {
